--- a/package.json
+++ b/package.json
@@ -21,10 +21,27 @@
   "devDependencies": {
     "@types/history": "^5.0.0",
     "@types/lodash": "^4.14.178",
+    "@typescript-eslint/eslint-plugin": "^5.12.1",
+    "@typescript-eslint/parser": "^5.12.1",
     "@vitejs/plugin-vue": "^2.2.0",
+    "eslint": "^8.10.0",
+    "eslint-plugin-vue": "^8.5.0",
     "typescript": "^4.5.4",
     "vite": "^2.8.0",
     "vite-plugin-eslint": "^1.3.0",
     "vue-tsc": "^0.29.8"
-  }
+  },
+  "description": "This template should help get you started developing with Vue 3 and Typescript in Vite. The template uses Vue 3 `<script setup>` SFCs, check out the [script setup docs](https://v3.vuejs.org/api/sfc-script-setup.html#sfc-script-setup) to learn more.",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/sunjinkang/test_vue3_sql.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/sunjinkang/test_vue3_sql/issues"
+  },
+  "homepage": "https://github.com/sunjinkang/test_vue3_sql#readme"
 }
