--- a/package.json
+++ b/package.json
@@ -26,9 +26,12 @@
     "@vitejs/plugin-vue": "^2.2.0",
     "eslint": "^8.10.0",
     "eslint-plugin-vue": "^8.5.0",
-    "typescript": "^4.5.4",
+    "ts-loader": "^9.3.1",
+    "typescript": "^4.7.4",
     "vite": "^2.8.0",
     "vite-plugin-eslint": "^1.3.0",
+    "vue-loader": "^17.0.0",
+    "vue-template-compiler": "^2.6.14",
     "vue-tsc": "^0.29.8"
   },
   "description": "This template should help get you started developing with Vue 3 and Typescript in Vite. The template uses Vue 3 `<script setup>` SFCs, check out the [script setup docs](https://v3.vuejs.org/api/sfc-script-setup.html#sfc-script-setup) to learn more.",
